new release fired out

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,10 +6,17 @@ and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.
 
 ## [Unreleased]
 
-## [2.0.0] - 2018-01-05
+## [2.0.1] - 2018-01-05
+### Added
+	- new property `ssh.verifyHosts`
+
+### Changed
+
+### Removed
+
+## [2.0.0] - 2018-01-02
 ### Added
 	- new property `ssh.emergencyTimeoutMS`
-	- new property `ssh.verifyHosts`
 	- a ChangeLog has been added
 
 ### Changed
@@ -17,5 +24,6 @@ and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.
 
 ### Removed
 
-[Unreleased]: https://github.com/RedHatQE/ssh-tools/compare/v2.0.0...HEAD
+[Unreleased]: https://github.com/RedHatQE/ssh-tools/compare/v2.0.1...HEAD
+[2.0.1]: https://github.com/RedHatQE/ssh-tools/compare/v1.0.0...v2.0.1
 [2.0.0]: https://github.com/RedHatQE/ssh-tools/compare/v1.0.0...v2.0.0
