a property `ssh.emergencyTimeoutMS` has been removed.

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,9 +6,10 @@ and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.
 
 ## [Unreleased]
 
-## [2.0.1] - 2018-01-05
+## [2.0.1] - 2018-01-08
 ### Added
 	- new property `ssh.verifyHosts`
+	- removed a property `ssh.emergencyTimeoutMS`
 
 ### Changed
 
